APERTA-9064 fix bug to enable save on safari

--- a/app/assets/stylesheets/components/_content-editable.scss
+++ b/app/assets/stylesheets/components/_content-editable.scss
@@ -30,6 +30,10 @@ div[contenteditable=true] {
   input[type=checkbox] {
     margin-top: 10px;
   }
+
+  .inline-edit-display {
+    display: list-item;
+  }
 }
 
 .content-editable-muted {
